migrated to java 25